# abs

./: .env.demo  .env.example  .fs-scan-allowlist.yaml  .gitignore  LICENSE  README.md  UPGRADE.md  docker-compose.yml  mkdocs.yml
core/backend/: .env.example  Dockerfile  alembic.ini  inngest.json  pyproject.toml  requirements.txt  setup.py
core/backend/alembic/: env.py
core/backend/alembic/versions/: 0000_init_baseline.py  0001_oauth_baseline.py  0002_oauth_extra_claims.py  0003_tenant_projects.py  0004_sprint20_meetings.py  0005_usage_log.py  0006_users_magic_link.py  0007_chat_sessions.py  0008_minted_token_blacklist.py  0009_chat_threading.py  0010_tenant_invites.py  0011_tenant_installed_plugins.py  0012_tenant_settings_and_fk_cascades.py  0013_failed_login_attempts.py  0014_tenant_id_audit_tables.py  0014b_backfill_tenant_id.py  0015_rls_audit_tables.py  0015b_abs_admin_role.py  0016_multitenant_provider_keys_project_members.py  0019_rls_tenant_tables.py  0020_agentic_tables.py  0020_external_mcp_servers.py  0021_growth_domain.py  0022_connector_states.py  0023_workflow_runs.py  0024_consent_records.py  0025_merge_agentic_mcp.py  0026_action_outbox.py  0027_minted_token_record.py  0028_meeting_audio_fingerprint.py
core/backend/app/: config.py  growth_metrics.py  growth_seed.py  main.py
core/backend/app/actions/: __init__.py  delivery.py  executor.py
core/backend/app/agentic/: __init__.py  approvals_bridge.py  dispatcher.py  fs_tools.py  loop.py  paths.py  policy.py  write_tools.py
core/backend/app/agentic_workflows/: __init__.py  service.py
core/backend/app/agents/: __init__.py  registry.py  runtime.py
core/backend/app/api/: agent_caps.py  auth.py  beta_admin.py  beta_portal.py  billing_portal.py  capture.py  cascade.py  chat.py  (+33 more)
core/backend/scripts/: entrypoint.sh  provider_drift_check.py  provider_drift_probe.py  run_e2e_backend.sh
core/backend/tests/: conftest.py  test_024_beta_portal.py  test_029_gdpr_account.py  test_030_compound_tools.py  test_030_provider_catalog.py  test_030_upper_tier_tools.py  test_031_beta_sequence.py  test_031_email_templates.py  test_031_status_enhanced.py  test_032_admin_auth.py  test_032_admin_dashboard.py  test_033_panel_apis.py  test_2n_customer_compose_postgres.py  test_2n_customer_pkg_mount_audit.py  test_2n_p1_fixes.py  test_a_busy_provider_does_not_break_the_things_that_call_it.py  test_a_failed_connection_says_what_went_wrong.py  test_a_health_check_that_cannot_go_red.py  test_a_meeting_is_not_a_row_number.py  test_a_paid_customer_always_gets_their_key.py  test_a_pasted_key_is_the_model_you_paid_for.py  test_a_recording_can_be_taken_back.py  test_a_revoked_key_stays_revoked.py  test_a_short_secret_is_not_a_secret.py  test_a_stranger_cannot_read_the_operators_server.py  test_action_executor.py  test_action_items.py  test_admin_analytics.py  test_admin_auth.py  test_admin_dashboard.py  test_admin_docs.py  test_admin_overview_mcp.py  test_admin_pages.py  test_admin_providers_status.py  test_admin_settings_store.py  test_admin_users_contract.py  test_admin_xff_spoof.py  test_agentic_api_smoke.py  test_agentic_branch_subworkflow.py  test_agentic_connector_and_honest_kinds.py  (+502 more)
(+1006 files in other folders)
