[project]
name = "abs-backend"
version = "1.0.6"
description = "Automatia ABS backend (FastAPI)"
license = {text = "BUSL-1.1"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.8",
    "pydantic-settings>=2.14.2",   # GHSA-4xgf-cpjx-pc3j — secrets_dir traversal
    "sqlmodel>=0.0.22",
    "stripe>=10",
    "PyJWT[crypto]>=2.13",         # PYSEC-2026-175..179 — the session/OAuth token library
    "cryptography>=46",
    "jinja2>=3.1",
    "bcrypt>=4.2",
    "mcp>=1.2",
    "httpx>=0.27",
    "anthropic>=0.40",
    "cohere>=5.13",
    "chromadb>=0.4.22",            # embedded PersistentClient for the RAG index
    "PyYAML>=6.0",                 # parses the plaintext of sops-decrypted secrets
    "nats-py>=2.6",                # NATS JetStream event bus
    "inngest>=0.4",                # durable workflow engine
    "alembic>=1.13",               # database migrations
    "cerbos>=0.10",                # policy decision point
    "qdrant-client>=1.13",         # tenant vector store
    "slowapi>=0.1.9",              # rate limiting on /v1/*
    "neo4j>=5.18",                 # graph store (Bolt async driver)
    "docker>=7.1",                 # plugin sandbox launcher
    "pypdf>=6.13.3",               # PDF text extraction — PYSEC-2026-3018, GHSA-jm82-fx9c-mx94:
                                   # a crafted upload could hang or exhaust memory on ingest
    "python-docx>=1.1",            # DOCX text extraction
    "openpyxl>=3.1",               # XLSX text extraction

    # Floors on packages we do not import directly, but which sit in the request
    # path and had published advisories. Pinned here because a resolver is free to
    # pick the oldest version a transitive range allows.
    "starlette>=1.3.1",            # PYSEC-2026-161/248/249/2280/2281 — host header, path, form limits
    "python-multipart>=0.0.31",    # PYSEC-2026-3036/3037/3039/3040 — every upload and form post
    "urllib3>=2.7.0",              # PYSEC-2026-141/142 — credentials survived a cross-origin redirect
    "idna>=3.15",                  # PYSEC-2026-215
    "mako>=1.3.12",                # PYSEC-2026-2617 (reached via alembic)
    "joserfc>=1.6.8",              # PYSEC-2026-2528 — forged HMAC tokens accepted (reached via Authlib)
    "pymdown-extensions>=10.21.3", # PYSEC-2026-2999
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "respx>=0.21",
    "hypothesis>=6.150",           # property-based fuzzing
    "pip-audit>=2.7",              # `pip-audit` in CI — see .github/workflows/ci.yml
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "fuzz: opt-in heavy property-based fuzz (10K+ Hypothesis examples; default-skip)",
    "postgres_only: requires a live Postgres (Sprint 2K RLS suite); skipped on SQLite",
]
addopts = "-m 'not fuzz'"
